# mailmind

./: .dockerignore  .gitignore  API_FIXES.md  DEMO.md  DEMO_ACCESS.txt  DEMO_CHECKLIST.md  DEMO_LOGIN.md  DEPLOYMENT_AND_COSTS.md  DEPLOY_PRODUCTION.md  Dockerfile  EVALUATION_SCORES.md  GOOGLE_SETUP.md  GO_LIVE_CHECKLIST.md  IMPLEMENTATION_NOTES.md  INTEGRATION_AND_STACK_STATUS.md  Implementation and what Presidio does  LICENSE  LIVE_DEMO_GUIDE.md  LOGIN_FLOW_FIX.md  MAILMIND_REFERENCE.md  PRIVACY_POLICY.md  PRODUCTION_FIXES.md  PROJECT_REFERENCE.md  README.md  README_FIXES.md  TECH_STACK_EVALUATION.md  TERMS_OF_SERVICE.md  TRIAGE_OPTIMIZATION.md  WIKI.html  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.yml  generate_architecture_pdf.py  mailmind.dump  railway.toml
backend/: .env.azure.example  .env.example  .env.local.example  DEV_ONBOARDING_FULLSTACK.md  Dockerfile  PII_UPGRADE_NOTES.md  README.md  add_oauth_columns.sql  api_bridge.py  check_oauth_columns.py  check_schema.py  comprehensive_schema_check.py  create_deployment_guide_pdf.py  feedback_store.json  fix_all_db_errors.py  fix_schema_mismatches.py  golden_dataset.json  inspect_users.py  langgraph.json  migrate_add_oauth_profile_fields.py  migrate_add_v3_oauth_columns.py  migrate_tone_profile_standalone.py  migrate_tone_profile_v2_to_v3.py  migrate_v2_to_v3_schema.py  pyproject.toml  railway.toml  requirements-prod.txt  requirements.txt  ruff.toml
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  (+1 more)
(+219 files in other folders)
