[project]
name = "mailmind-backend"
version = "0.1.0"
description = "MailMind v2 backend for email ingestion, triage, RAG, and commitment extraction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.7,<3",
    "email-validator>=1.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "msal>=1.37.0",
    "pytest>=8.0.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
